--- a/public/game.html
+++ b/public/game.html
@@ -9,11 +9,11 @@
 <style>
 
 </style>
-<script src="js/phaser.min.js"></script>
+<script src="javasripts/phaser.min.js"></script>
 </head>
 <body>
 <div id="game"></div>
-<script src="js/game.js"></script>
+<script src="javascripts/game.js"></script>
 
 
 </body>
