--- a/public/game.html
+++ b/public/game.html
@@ -5,15 +5,16 @@
 <meta charset="utf-8" />
     
 
-<title>flappy bird</title>
+<title>flappy tissue</title>
 <style>
-
+	body,p,div{ margin: 0; padding: 0; }
+	canvas{ margin:0 auto;}
 </style>
-<script src="javasripts/phaser.min.js"></script>
+<script src="phaser.min.js"></script>
 </head>
 <body>
 <div id="game"></div>
-<script src="javascripts/game.js"></script>
+<script src="game.js"></script>
 
 
 </body>
